<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_face"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_50"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_desposit_shz"/>

    <TextView
        android:id="@+id/tv_fail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_face"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_14"
        android:gravity="center"
        android:text="存管账户被退回"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/sp_14"/>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/tv_fail"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/background_gray"/>

    <TextView
        android:id="@+id/tv_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/txt_warm_prompt"
        android:textColor="@color/text_black_pre"
        android:textSize="@dimen/sp_14"
        />

    <TextView
        android:id="@+id/tv_hint_msg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_43"
        android:layout_below="@+id/tv_hint"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center"
        android:text="@string/txt_warm_prompt_text"
        android:textColor="@color/text_black"
        android:textSize="@dimen/sp_14"/>

    <TextView
        android:id="@+id/tv_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_hint_msg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_24"
        android:gravity="center"
        android:text="@string/txt_return_reason"
        android:textColor="@color/text_black_pre"
        android:textSize="@dimen/sp_14"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_fail_reason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_return"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center"
        android:text="温证件已经过期"
        android:textColor="@color/text_black"
        android:textSize="@dimen/sp_14"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_guest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_below="@+id/tv_fail_reason"
        android:gravity="center"
        android:paddingBottom="@dimen/dp_8"
        android:paddingTop="@dimen/dp_8"
        android:text="@string/txt_sevice_phone"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/sp_16"
        android:layout_centerVertical="true"
         />

    <TextView
        android:id="@+id/tv_reopen"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_43"
        android:layout_below="@+id/tv_guest"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/bg_blue"
        android:gravity="center"
        android:text="@string/txt_retry_open"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"/>

    <TextView
        android:id="@+id/tv_cantact_guest"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_43"
        android:layout_below="@+id/tv_reopen"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_14"
        android:background="@drawable/bg_transpant_blue_frame"
        android:gravity="center"
        android:text="@string/txt_online_service"
        android:textColor="@color/bg_bule"
        android:textSize="@dimen/sp_16"/>

    <TextView
        android:id="@+id/tv_know"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_cantact_guest"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_12"
        android:gravity="center"
        android:padding="@dimen/dp_15"
        android:text="@string/txt_i_know"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/sp_14"
        />


</RelativeLayout>
