<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/layout_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_60"
        android:background="@drawable/bg_white_shape_corner_up"
        android:paddingBottom="@dimen/dp_25">


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_90"
            android:gravity="center"
            android:text="@string/txt_open_desposit_account_title"
            android:textColor="@color/txt_5c6676"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_8"
            android:gravity="center"
            android:text="@string/txt_open_desposit_account_tip1"
            android:textColor="@color/txt_9ca3ad"
            android:textSize="@dimen/sp_12"/>

        <TextView
            android:id="@+id/tv_tip1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_tip"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/bg_blue_cicle"
            android:gravity="center"
            android:paddingBottom="@dimen/dp_6"
            android:paddingLeft="@dimen/dp_18"
            android:paddingRight="@dimen/dp_18"
            android:paddingTop="@dimen/dp_6"
            android:text="@string/txt_open_desposit_account_tip2"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12"/>

        <TextView
            android:id="@+id/tv_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_tip1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_6"
            android:drawablePadding="@dimen/dp_6"
            android:drawableRight="@drawable/ic_lc_right"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/txt_see_details"
            android:textColor="@color/txt_9ca3ad"
            android:textSize="@dimen/sp_11"/>


    </RelativeLayout>

    <View
        android:id="@+id/line_1"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_below="@+id/layout_content"
        android:background="@color/select_list_earnings"/>


    <LinearLayout
        android:id="@+id/left_right_rl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_content"
        android:background="@drawable/bg_white_shape_corner_down"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/left_text"
            android:layout_width="0dip"
            android:layout_height="@dimen/dp_48"
            android:layout_weight="1"
            android:background="@drawable/dialog_btn_rounded_left"
            android:gravity="center"
            android:text="@string/Txt_cancle"
            android:textColor="@color/text_black"
            android:textSize="@dimen/sp_14"/>

        <View
            android:layout_width="1px"
            android:layout_height="@dimen/dp_48"
            android:layout_gravity="center_vertical"
            android:background="@color/select_list_earnings"/>

        <TextView
            android:id="@+id/right_text"
            android:layout_width="0dip"
            android:layout_height="@dimen/dp_48"
            android:layout_weight="1"
            android:background="@drawable/dialog_btn_rounded_right"
            android:gravity="center"
            android:text="@string/txt_open_desposit_account"
            android:textColor="@color/bule_press"
            android:textSize="@dimen/sp_14"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:src="@drawable/pic_lmxw"/>

</RelativeLayout>