<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/layout_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:background="@drawable/bg_gray_shape_corner_up">

        <ImageView
            android:id="@+id/iv_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_15"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_tsh3x"/>


        <TextView
            android:id="@+id/tv_num"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_img"
            android:layout_marginTop="@dimen/dp_14"
            android:gravity="center"
            android:text="@string/text_redpacket_num"
            android:textColor="@color/txt_red_f1584c"
            android:textSize="@dimen/sp_14"/>

        <TextView
            android:id="@+id/tv_tip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_num"
            android:layout_marginTop="@dimen/dp_8"
            android:paddingBottom="@dimen/dp_24"
            android:gravity="center"
            android:text="@string/text_redpacket_tip"
            android:textColor="@color/text_black_pre"
            android:textSize="@dimen/sp_12"/>


    </RelativeLayout>

    <View
        android:id="@+id/line_1"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_below="@+id/layout_content"
        android:background="@color/select_list_earnings"/>


    <LinearLayout
        android:id="@+id/left_right_rl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_content"
        android:background="@drawable/bg_white_shape_corner_down"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/left_text"
            android:layout_width="0dip"
            android:layout_height="@dimen/dp_48"
            android:layout_weight="1"
            android:background="@drawable/dialog_btn_rounded_left"
            android:gravity="center"
            android:text="@string/txt_close"
            android:textColor="@color/text_black"
            android:textSize="@dimen/sp_14"/>

        <View
            android:layout_width="1px"
            android:layout_height="@dimen/dp_48"
            android:layout_gravity="center_vertical"
            android:background="@color/select_list_earnings"/>

        <TextView
            android:id="@+id/right_text"
            android:layout_width="0dip"
            android:layout_height="@dimen/dp_48"
            android:layout_weight="1"
            android:background="@drawable/dialog_btn_rounded_right"
            android:gravity="center"
            android:text="@string/text_share"
            android:textColor="@color/txt_red_f1584c"
            android:textSize="@dimen/sp_14"/>
    </LinearLayout>

</RelativeLayout>