<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/layout_title_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_shape_corner_up"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:paddingTop="16dp"
            android:text="标题"
            android:textColor="@color/text_black"
            android:textSize="@dimen/sp_16"
            android:visibility="visible"/>


        <TextView
            android:id="@+id/tv_center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:gravity="left|center_vertical"
            android:paddingBottom="25dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="25dp"
            android:text="@string/txt_msg_center"
            android:textColor="@color/text_black"
            android:textSize="@dimen/sp_14"/>


    </RelativeLayout>

    <View
        android:id="@+id/line_1"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_below="@+id/layout_title_content"
        android:background="@color/select_list_earnings"/>

    <LinearLayout
        android:id="@+id/left_right_rl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/left_text"
            android:layout_width="0dip"
            android:layout_height="@dimen/dp_48"
            android:layout_weight="1"
            android:background="@drawable/dialog_btn_rounded_left"
            android:gravity="center"
            android:text="@string/Txt_cancle"
            android:textColor="@color/text_black"
            android:textSize="@dimen/sp_14"/>

        <View
            android:layout_width="1px"
            android:layout_height="@dimen/dp_40"
            android:layout_marginBottom="@dimen/dp_6"
            android:layout_marginTop="@dimen/dp_6"
            android:background="@color/select_list_earnings"/>

        <TextView
            android:id="@+id/right_text"
            android:layout_width="0dip"
            android:layout_height="@dimen/dp_48"
            android:layout_weight="1"
            android:background="@drawable/dialog_btn_rounded_right"
            android:gravity="center"
            android:text="@string/Txt_sure"
            android:textColor="@color/text_blue"
            android:textSize="@dimen/sp_14"/>
    </LinearLayout>
</RelativeLayout>