<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:paddingTop="@dimen/dp_10">

        <LinearLayout
            android:id="@+id/financial_details_lin"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_details"
                android:textColor="@color/gray"
                android:textSize="@dimen/sp_18" />

            <ImageView
                android:id="@+id/details_blue_iv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_2"
                android:layout_marginTop="@dimen/dp_10" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/financial_problem_lin"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/problem_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_problem"
                android:textColor="@color/gray"
                android:textSize="@dimen/sp_18" />

            <ImageView
                android:id="@+id/problem_blue_iv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_2"
                android:layout_marginTop="@dimen/dp_10" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/financial_record_lin"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/record_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/investment_record"
                android:textColor="@color/gray"
                android:textSize="@dimen/sp_18" />

            <ImageView
                android:id="@+id/record_blue_iv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_2"
                android:layout_marginTop="@dimen/dp_10" />
        </LinearLayout>


    </LinearLayout>


    <com.example.administrator.lmw.finance.utils.CustViewPage
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/select_list"
        android:layout_marginTop="@dimen/dp_10"
        android:flipInterval="30" />

</LinearLayout>